[package]
name = "lab3_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"
rand = "0.8.5"
serde_json = "1.0.79"
bincode = "1.3.3"
native-tls = "0.2.10"
strum = "0.24.0"
strum_macros = "0.24.0"
rustbreak = { version = "2", features = ["ron_enc"] }
log = "0.4"
casbin = { version="2.0.9", features = ["logging", "explain"] }
tokio = { version = "1.18.2", features = ["full"] }
csv = "1"

[dependencies.validation]
path = "../validation"

[dependencies.utils]
path = "../utils"
